fixed image stretch

--- a/css/visual-design.css
+++ b/css/visual-design.css
@@ -55,6 +55,7 @@ body {
 
 .small-img {
     width: 4rem;
+    height: 4rem;
     border: 3px solid #E6E6E6;
 }
 .lighter-text {
